--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <tr>
       <td>
-        <a href="https://www.linkedin.com/in/warevalo/"><img src="images/LinkedIn Photo May 2019.jfif" alt="warevalo LinkedIn Photo"></a>
+        <a href="https://www.linkedin.com/in/warevalo/"><img src="LinkedIn Photo May 2019.jfif" alt="warevalo LinkedIn Photo"></a>
       </td>
 
       <td>
