--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <tr>
       <td>
-        <a href="https://www.linkedin.com/in/warevalo/"><img src="https://media.licdn.com/dms/image/C5603AQEEbuvHSNRaaw/profile-displayphoto-shrink_200_200/0?e=1576108800&v=beta&t=dlMpFQjXKaC8Ytij0licOkIF2dlGywB5PFeFZ3e3Gb8" alt="warevalo LinkedIn Photo"></a>
+        <a href="https://www.linkedin.com/in/warevalo/"><img src="LinkedIn Photo May 2019.jfif" alt="warevalo LinkedIn Photo"></a>
       </td>
 
       <td>
